Fixed W05 Assignment: CSS - Fonts and Spacing

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -7,7 +7,8 @@ nav a{
     text-decoration: none;
     text-align: center;
     color: #151E3D;
-    padding: 35px;
+    background-color: #699BBC;
+    padding: 20px;
 }
 
 #hero-msg h1, #hero-msg h4{
